Make sure all the underlining when hovering is visible

--- a/mzalendo/kenya/static/kenya/election-homepage/base.css
+++ b/mzalendo/kenya/static/kenya/election-homepage/base.css
@@ -22,7 +22,7 @@
 }
 
 .election-home .presidential-aspirants h4 {
-  height: 2.5em;
+  min-height: 3em;
   text-align: center;
   overflow: hidden;
 }
